Fix homepage behaviour on mobile devices

--- a/custom.css
+++ b/custom.css
@@ -31,9 +31,13 @@ body {
 
 .fa {
 	color: white;
-	font-size: 50px;
-	width: 70px;
+	font-size: 40px;
+	width: 50px;
 	text-align: left;
+}
+
+.fa:hover {
+	text-decoration: none;
 }
 
 .header-brand {
@@ -41,6 +45,7 @@ body {
 }
 
 .header-link {
+	font-family: 'Avenir';
 	font-size: 14px;
 	letter-spacing: 0.25px;
 	margin: 10px 0 10px 0;
@@ -52,6 +57,13 @@ body {
 }
 
 @media (min-width: 768px) {
+	.fa {
+		color: white;
+		font-size: 50px;
+		width: 70px;
+		text-align: left;
+	}
+
 	.header-brand {
 		margin: 0 0 0 32px;
 		font-family: 'Courier New', 'Helvetica Neue', Helvetica, Arial, sans-serif
